# srs-daq

./: '  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE.md  README.md  README.rst  conanfile.py  environment.yml  static_env.yml
.github/workflows/: ci.yml  publish_doc.yml  release.yml
apps/: CLIOptionsMap.hpp  main.cpp
backend/: CLIOptionsMap.hpp  CMakeLists.txt  main.cpp
backend/srs/: Application.cpp  Application.hpp  CMakeLists.txt  format.hpp  srs.hpp
backend/srs/analysis/: CMakeLists.txt  DataProcessManager.cpp  DataProcessManager.hpp  DataProcessor.cpp  DataProcessor.hpp  DataStructs.hpp  DataWriter.hpp  DataWriterOptions.hpp  JsonWriter.hpp  SRSLinkDef.hpp
backend/srs/converters/: CMakeLists.txt  DataConvertOptions.hpp  DataConverterBase.hpp  DataDeserializeOptions.hpp  ProtoDelimSerializer.hpp  ProtoDeserializer.hpp  ProtoSerializer.hpp  ProtoSerializerBase.hpp  ProtoToStructConverter.hpp  RawToDelimRawConveter.hpp  SerializableBuffer.hpp  StructDeserializer.cpp  StructDeserializer.hpp  StructToProtoConverter.hpp
backend/srs/data/: CMakeLists.txt  DataStructs.cpp  DataStructs.hpp  DataStructsFormat.hpp  SRSDataStructs.hpp  SRSLinkDef.hpp  message.proto
backend/srs/devices/: CMakeLists.txt  Configuration.hpp
backend/srs/readers/: CMakeLists.txt  ProtoMsgReader.cpp  ProtoMsgReader.hpp  ProtoMsgReader.rst  RawFrameReader.cpp  RawFrameReader.hpp  RawFrameReader.rst
backend/srs/serializers/: CMakeLists.txt  Concepts.hpp  DataConverterBase.hpp  DataDeserializeOptions.hpp  Deserializers.hpp  ProtoDelimDeserializer.hpp  ProtoDelimSerializer.hpp  ProtoDeserializer.hpp  ProtoDeserializerBase.hpp  ProtoSerializer.hpp  ProtoSerializerBase.hpp  ProtobufSerializer.hpp  SerializableBuffer.hpp  StructDeserializer.hpp  StructSerializer.hpp  StructToProtoConverter.hpp
backend/srs/utils/: AppStatus.hpp  CMakeLists.txt  CommonAlias.hpp  CommonConcepts.hpp  CommonDefitions.hpp  CommonFunctions.hpp  ConnectionBase.hpp  ConnectionTypeDef.hpp  Connections.cpp  Connections.hpp  ValidData.hpp
backend/srs/workflow/: CMakeLists.txt  DataProcessManager.cpp  DataProcessor.cpp  DataProcessor.hpp  Handler.cpp  Handler.hpp  TaskDiagram.cpp  TaskDiagram.hpp
backend/srs/writers/: BinaryFileWriter.hpp  BinaryWriter.hpp  CMakeLists.txt  DataWriter.cpp  DataWriter.hpp  DataWriterOptions.hpp  JsonWriter.hpp  RootFileWriter.hpp  UDPWriter.hpp
cmake/: README.rst  check_compilers.cmake  import_packages.cmake  install_config.cmake  install_packages.cmake  install_targets.cmake  option_settings.cmake  sphinx_setup.cmake  srsConfig.cmake.in
doc/: CMakeLists.txt  build_source.md  build_source.rst  classes.rst  conf.py.in  download_step.rst  doxy_main.md  executable.rst  index.rst  install_conda.md  install_conda.rst  installation.rst  introduction.rst  library_usage.md  library_usage.rst
doc/stubs/: check_binpb_message.rst  check_udp_message.rst  cmake_doc.rst  library_apis.rst
examples/: CMakeLists.txt  check_binpb_message.rst  check_udp_message.rst
examples/readUDP/: CMakeLists.txt  main.cpp
frontend/: CMakeLists.txt  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Control.tsx  Headline.module.css  Headline.tsx  Help.tsx  MainRegion.tsx  Plots.module.css  Plots.tsx  SideBar.module.css  SideBar.tsx
frontend/src/utils/: CommonDefinitions.ts
source/: CLIOptionsMap.hpp  CMakeLists.txt  main.cpp
source/srs/: Application.cpp  Application.hpp
source/srs/analysis/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.hpp  DataStructs.cpp  DataStructs.hpp  DataWriter.cpp  DataWriter.hpp  RootFileSink.hpp  RootFileWriter.hpp  RootHttpServer.cpp  RootHttpServer.hpp  SRSLinkDef.hpp
source/srs/utils/: CommonDefitions.hpp  CommonFunctions.hpp  Connections.hpp  Serializer.hpp
srs/: Application.cpp  Application.hpp  CMakeLists.txt  SRSLinkDef.hpp
srs/analysis/: DataProcessor.cpp  DataProcessor.hpp  DataWriter.cpp  DataWriter.hpp
srs/utils/: Serializer.hpp
test/: CMakeLists.txt  check_binpb_message.py  check_udp_message.py  message_pb2.py
test/backend/: CMakeLists.txt  test_main.cpp
test/backend/srs/: CMakeLists.txt  SRSEmulator.hpp  TestOutputs.cpp
utils/install_deps/: debian_bookworm.sh
